[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Game Screen/arrow_up.png" type="Texture" id=1]
[ext_resource path="res://game/scripts/ArrowButton.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 20.75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 32.5 )

[node name="ArrowButton" type="AnimatedSprite"]
frames = SubResource( 1 )
script = ExtResource( 3 )

[node name="PerfectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectArea"]
shape = SubResource( 2 )

[node name="GoodArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodArea"]
shape = SubResource( 3 )

[node name="OkayArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OkayArea"]
shape = SubResource( 4 )

[connection signal="area_entered" from="PerfectArea" to="." method="_on_PerfectArea_area_entered"]
[connection signal="area_exited" from="PerfectArea" to="." method="_on_PerfectArea_area_exited"]
[connection signal="area_entered" from="GoodArea" to="." method="_on_GoodArea_area_entered"]
[connection signal="area_exited" from="GoodArea" to="." method="_on_GoodArea_area_exited"]
[connection signal="area_entered" from="OkayArea" to="." method="_on_OkayArea_area_entered"]
[connection signal="area_exited" from="OkayArea" to="." method="_on_OkayArea_area_exited"]
